--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
   <div class="row">
     <div class="large-6 columns">
+      Please enter a number between 0 and 10
       <input type="text" placeholder="an input" />
-      <a href="#" class="button">Button</a>
-      <a href="#" class="button success">Button</a>
-      <a href="#" class="button alert">Button</a>
+      <a href="#" class="button">Submit</a>
+      <a href="#" class="button success">Play Again</a>
     </div>
     <div class="large-6 columns">
       <div data-alert class="alert-box">
