--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="large-6 columns">
-      Please enter a number between 0 and 10
+      Please enter a number between 0 and 10<br/>
       <input type="text" placeholder="an input" />
       <a href="#" class="button">Submit</a>
       <a href="#" class="button success">Play Again</a>
